--- a/src/app/customrulecreate/rule-create.component.less
+++ b/src/app/customrulecreate/rule-create.component.less
@@ -30,3 +30,8 @@
 .rangeform .row:last-child{
     margin-bottom: 0;
 }
+.text-erorshow{
+    font-size: 12px;
+    font-weight: 300;
+    display: block;
+}
