--- a/src/app/customrules/rules.component.html
+++ b/src/app/customrules/rules.component.html
@@ -42,7 +42,7 @@
             <td>{{ rule.isDefault ? 'Yes' : 'No' }}</td>
 
             <td>
-                <a [routerLink]="['/reports/rules/show/'+rule._id + '/DISPLAY']" class="btn btn-primary ms-3 ml-3">
+                <a [routerLink]="['/custom-rules/show/'+rule._id + '/DISPLAY']" class="btn btn-primary ms-3 ml-3">
                     Show
                 </a>
             </td>
