--- a/src/app/customrulecreate/rule-matrix-show/rule-matrix-show.component.html
+++ b/src/app/customrulecreate/rule-matrix-show/rule-matrix-show.component.html
@@ -8,12 +8,14 @@
 
                     <div class="w-100">
                         <div class="w-100 mb-3 d-flex ">
-                            <button type="button" [ngClass]="{'btnBlue': apiResponse.creativeType === 'DISPLAY'}"
+                            <a [routerLink]="['/custom-rules/show/'+ruleId+'/DISPLAY']" type="button"
+                                [ngClass]="{'btnBlue': apiResponse.creativeType === 'DISPLAY'}"
                                 class="btn arrowBtn">Display
-                                Ads</button>
-                            <button type="button" [ngClass]="{'btnBlue': apiResponse.creativeType === 'VIDEO'}"
+                                Ads</a>
+                            <a [routerLink]="['/custom-rules/show/'+ruleId+'/VIDEO']" type="button"
+                                [ngClass]="{'btnBlue': apiResponse.creativeType === 'VIDEO'}"
                                 class="btn arrowBtn ml-4">Video
-                                Ads</button>
+                                Ads</a>
                         </div>
                         <div *ngFor="let rscore of apiResponse.customRuleRangesResponse; let i = index"
                             class="w-100 mb-4 rangeform">
@@ -70,8 +72,8 @@
                     </div>
                     <div class="w-100">
                         <div class="row justify-content-center">
-                            <div class="col-md-8">
-                                <div class="w-100 p-3 rounded-3 shadow shadow-lg bg-white">
+                            <div class="col-md-12">
+                                <div class="w-100 ">
                                     <button
                                         class="btn mb-3 btn-light arrowBtn py-3 rounded-4 d-flex align-items-center justify-content-between w-100">
                                         <span>Weights</span>
@@ -81,8 +83,7 @@
                                         </span>
                                     </button>
 
-                                    <div *ngFor="let weight of apiResponse.customRuleWeightsResponse"
-                                        class="w-100 mb-4 rangeform">
+                                    <div *ngFor="let weight of customRuleWeightsResponse" class="w-100 mb-4 rangeform">
                                         <h4 class="subHeading mb-3">{{weight.name}}</h4>
                                         <div class="w-100 bg-info-alert p-1 rolecreatealert">
 
@@ -97,10 +98,9 @@
                                             <div class="row">
                                                 <div *ngFor="let wt of weight.scores" class="col-md-4">
                                                     <label for="">{{wt.name}}</label>
-                                                    <input type="text" [(ngModel)]="wt.weight" class="form-control">
-                                                    <div class="text-danger" *ngIf="weight.invalidWeight">
-                                                        The total weight must be 100.
-                                                    </div>
+                                                    <input type="text" [(ngModel)]="wt.weight" readonly
+                                                        class="form-control">
+
                                                 </div>
                                             </div>
                                         </div>
