--- a/src/app/components/reports/report-container/report-container.component.html
+++ b/src/app/components/reports/report-container/report-container.component.html
@@ -136,6 +136,11 @@
 
 
                                         </div>
+                                        <div class="w-100 mt-2">
+                                            <div class="text-right">
+                                                <button (click)="handleOpen()" class="btn btn-info">Ok</button>
+                                            </div>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
