--- a/src/app/components/reports/report-container/report-container.component.less
+++ b/src/app/components/reports/report-container/report-container.component.less
@@ -243,6 +243,11 @@
         border-radius: 1rem;
         font-size: 12px !important;
         right: 0 !important;
+        button{
+            font-size: 12px;
+            box-shadow: none;
+            outline: none;
+        }
     }
     .customModal{
         position: fixed;
